--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       <div class="row">
         <div class="col text-center py-5">
           <h1 class="display-4">About Nature</h1>
-          <p class="lead">On Every Shit NAture Produces Exponential Shit,Nature Remains  Silent to Appoint Hassle Free Mother f@@ckerr exact Fact   </p>
+          <p class="lead">On Every Shit NAture Produces Exponential Shit,Nature Remains In Silent Mode to Appoint Hassle Free Mother f@@ckerr exact Fact   </p>
           <a href="#" class="btn btn-outline-light">Find Out More</a>
         </div>
       </div>
@@ -251,7 +251,7 @@
           <p>Copyright &copy;
             <span id="year"></span>
           </p>
-          <button class="btn btn-danger" data-toggle="modal" data-target="#contactModal">One To Many Bitch Please Click</button>
+          <button class="btn btn-danger" data-toggle="modal" data-target="#contactModal">One To Many Bitch Please Click Here</button>
         </div>
       </div>
     </div>
