--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="col-lg-8 d-none d-lg-block">
             <h1 class="display-4">Avon
               <strong>A Con Expert</strong> and Don
-              <strong>of cheat via virtual profit</strong>
+              <strong>of cheat by showing virtual profit in 🍔 screen</strong>
             </h1>
             <div class="d-flex">
               <div class="p-4 align-self-start">
