--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="col-lg-4">
             <div class="card bg-danger text-center card-form">
               <div class="card-body">
-                <h3> Hey pony oldyy Kartok steppully</h3>
+                <h3> Hey pony oldyy f@got Kartok steppully</h3>
                 <p>Please fill out this form to Make Your 100 In best form</p>
                 <form>
                   <div class="form-group">
