--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         <div class="col text-center py-5">
           <h1 class="display-4">LIGHTWALLA</h1>
           <p class="lead">Light is Best,but know to undress the stress.You are like detective james Bond</p>
-          <a href="#" class="btn btn-outline-light bg-danger">Light Delight my Sight</a>
+          <a href="#" class="btn btn-outline-light bg-danger">Get Hajmola To Bye Bye Pet Jhamela</a>
         </div>
       </div>
     </div>
