--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center py-5">
-          <h1 class="display-4">Cowasami</h1>
+          <h1 class="display-4">Cowwasami GOIN</h1>
           <p class="lead">Cute ,Innocent/Helpful Mind, Eye comes In relax state when one see Food Update,keep spreading cooking recipes U Sweet Beat(Never met But It is Power Of Data Analysis{Technology Terminology})</p>
           <a href="#" class="btn btn-outline-danger">Cowwasami Rocks</a>
         </div>
