--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <div class="container">
       <div class="row">
         <div class="col text-center py-5">
-          <h1 class="display-4">LIGHTWALLA</h1>
+          <h1 class="display-4">LIGHT<span style="color:rgb(157, 255, 0);">Walla</span></h1> 
           <p class="lead">Light is Best,but know to undress the stress.You are like detective james Bond</p>
           <a href="#" class="btn btn-outline-light bg-danger">Light Good For Eyesight</a>
         </div>
