--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       <div class="row">
         <div class="col text-center py-5">
            <h1 class="display-4">Cowasami <span style="color:rgb(255, 174, 0);">GOIN</span></h1> 
-          <p class="lead">Cute ,Innocent/Helpful Mind, Eye comes In relax state when one see Food Update,keep spreading cooking recipes U Sweet Beat(Never met But It is Power Of Data Analysis{Technology Terminology})</p>
+          <p class="lead">Cute ,Innocent/Helpful Mind, Eye comes In relax state when one see Food Update,keep spreading cooking recipes U Sweet Beat(Never met But It is Power Of Human Behaviour Psychology {Common Sense })</p>
           <a href="#" class="btn btn-outline-danger">Cowwasami Rocks</a>
         </div>
       </div>
