--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="home-inner container">
         <div class="row">
           <div class="col-lg-8 d-none d-lg-block">
-            <h1 class="display-4">Avon
+            <h1 class="display-4">AƎON
               <strong>A Con Expert</strong> and Don
               <strong>of cheat by showing virtual profit in 🍔 screen</strong>
             </h1>
