--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <div class="home-inner container">
         <div class="row">
           <div class="col-lg-8 d-none d-lg-block">
-            <h1 class="display-4">A<span style="color: red;">Ǝ</span>ON
+            <h1 class="display-4">A<span style="color: rgb(255, 0, 0);">Ǝ</span>ON
               <strong>A Con Expert</strong> and Don
-              <strong>of cheat by showing virtual profit in 🍔 screen</strong>
+              <strong>Of Cheat By Showing Virtual Profit In 🍔 Screen</strong>
             </h1>
             <div class="d-flex">
               <div class="p-4 align-self-start">
