--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="col-lg-8 d-none d-lg-block">
             <h1 class="display-4">A<span style="color: rgb(255, 0, 0);">Ǝ</span>ON
-              <strong>A Con Expert</strong> and Don
+              <strong>A Con Expert</strong> <span style="color: rgb(255, 115, 0);">&</span> Don
               <strong>Of Cheat By Showing Virtual Profit In 🍔 Screen</strong>
             </h1>
             <div class="d-flex">
