--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="col-lg-8 d-none d-lg-block">
             <h1 class="display-4">A<span style="color: rgb(255, 0, 0);">Ǝ</span>ON
               <strong>A Con Expert</strong> <span style="color: rgb(255, 115, 0);">&</span> Don
-              <strong>Of Cheat By Showing Virtual Profit In 🍔 Screen</strong>
+              <strong>Of Cheat By Showing Virtual Profit In 👴 Screen</strong>
             </h1>
             <div class="d-flex">
               <div class="p-4 align-self-start">
