--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <div class="container one">
       <div class="row">
         <div class="col text-center py-4">
-          <h3>EnIv</h3>
+          <h3>PAV<span style="color:#FF6B33;font-weight:bold">Ǝ</span>S</h3>
           <p>Copyright &copy;
             <span id="year"></span>
           </p>
