--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body data-spy="scroll" data-target="#main-nav" id="home">
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" id="main-nav">
     <div class="container">
-      <a href="index.html" class="navbar-brand">PAV<span style="color:#FF6B33;font-weight:bold">Ǝ</span>S</a>
+      <a href="index.html" class="navbar-brand">PAV<span style="color:#FF6B33;font-weight:bold">E</span>S</a>
       <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -247,7 +247,7 @@
     <div class="container one">
       <div class="row">
         <div class="col text-center py-4">
-          <h3>PAV<span style="color:#FF6B33;font-weight:bold">Ǝ</span>S</h3>
+          <h3>PAV<span style="color:#FF6B33;font-weight:bold">E</span>S</h3>
           <p>Copyright &copy;
             <span id="year"></span>
           </p>
