--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <script>alert("Spam Website marked by our GITTEAM")</script>
     <script>
-    var aa= prompt("Enter validIDproff unique key with 4digit GITPREMIUM CODE");
+    var aa= prompt("Enter validIDproof unique key with 4digit GITPREMIUM CODE");
     alert("some details is not matching");
     </script>
+  <script> 
+alert("You have visited this web page multiple times based on your network IP or Our team is detecting request from same location");
+  </script>
     <script>
       
       var a =99;
