--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <script>
     
-    var aa= prompt("Enter Your Real Age");
+    var aa= prompt("Enter Your Real Age For eg:34 ");
     if( aa >= 33){
       alert("This is your Real Age Awesome !!")
     }
