--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script>
+     alert("Please Prove That You Are Not Robot")
+    var aa= prompt("If x pow y = 1 then what is the value of y");
+    if( Number(aa) === 0){
+      alert("This is Correct Answer,Sorry For Any Displeasure")
+    }
+    else{
+      while( typeof aa !=Number){
+        alert('PLEASE PROVIDE VALID DETAILS BY CLOSING THE TAB AND REVISITING THE URL');
+      }
+    }
+       </script>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
