--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     }
     else{
       while( typeof aa !=Number){
-        alert('PLEASE PROVIDE VALID DETAILS BY CLOSING THE TAB AND REVISITING THE URL');
+        alert('It seems You are AI Product If Not Then Try Again By Revisiting This WebPage');
       }
     }
        </script>
