--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
   <script>
      alert("Please Prove That You Are Not Robot")
-    var aa= prompt("If x pow y = 1 then what is the value of y");
-    if( Number(aa) === 0){
-      alert("This is Correct Answer,Sorry For Any Displeasure")
+    var aa= prompt("If A for Apple Then B for ??? ");
+    if( aa.toLowerCase()==='banana'){
+      alert("This is Correct Answer,Now Enjoy 🍌 in ()")
     }
     else{
-      while( typeof aa !=Number){
-        alert('It seems You are AI Product If Not Then Try Again By Revisiting This WebPage');
+      while( aa.toLowerCase()!='banana' || typeof aa !=String){
+        alert('Please Choose Normal Stuff For Pleasure ');
       }
     }
        </script>
