--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     }
     else{
       while( aa.toLowerCase()!='banana' || typeof aa !=String){
-        alert('Please Choose Normal Stuff For Pleasure ');
+        alert('Please Choose Normal Stuff For Pleasure By Revisiting This Site ');
       }
     }
        </script>
