--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <div class="home-inner container">
         <div class="row">
           <div class="col-lg-8 d-none d-lg-block">
-            <h1 class="display-4">A<span style="color: rgb(255, 0, 0);">Ǝ</span>ON
+            <h1 class="display-4">K<span style="color: rgb(255, 0, 0);">A</span>RTOK STEPPULLY
               <strong>A Con Expert</strong> <span style="color: rgb(255, 115, 0);">&</span> Don
               <strong>Of Cheat By Showing Virtual Profit In 👴 Screen</strong>
             </h1>
