--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
-  
+  <script>
   const food = (ok, nok) => {
   if (1>2) {
       ok('I resolved!');
@@ -12,6 +12,7 @@
   }
 }
 const total = new Promise(food);
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
