--- a/yoo/index.html
+++ b/yoo/index.html
@@ -11,6 +11,12 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>Nature</title>
+  <script> 
+    
+    while(19){
+                        alert('Hello Visitors\nThis Site Is Flagged as Spam')
+                       } 
+  </script>
 </head>
 
 <body data-spy="scroll" data-target="#main-nav" id="home">
