--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
   <title>जय हनुमान</title>
+  <script>
+  while(19){
+                        
+                        alert('Hello Visitors\nThis Site Is Flagged as Spam')
+                       }
+  
+  </script>
 </head>
 
 <body data-spy="scroll" data-target="#main-nav" id="home">
