--- a/index.html
+++ b/index.html
@@ -9,14 +9,8 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
     crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <title>जय हनुमान</title>
-  <script>
-  while(19){
-                        
-                        alert('Hello Visitors\nThis Site Is Flagged as Spam')
-                       }
+  <title>Seva~~p</title>
   
-  </script>
 </head>
 
 <body data-spy="scroll" data-target="#main-nav" id="home">
@@ -30,12 +24,6 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a href="#home" class="nav-link">FactAct</a>
-          </li>
-          <li class="nav-item">
-            <a href="#explore-head-section" class="nav-link">Food</a>
-          </li>
-          <li class="nav-item">
-            <a href="#create-head-section" class="nav-link">Stress</a>
           </li>
           <li class="nav-item">
             <a href="#share-head-section" class="nav-link">Nature</a>
@@ -111,21 +99,8 @@
     </div>
   </header>
 
-  <!-- EXPLORE -->
-   <section id="explore-head-section" > 
-    <div class="container">
-      <div class="row">
-        <div class="col text-center py-5">
-           <h1 class="display-4">Cowasami <span style="color:rgb(255, 174, 0);">GOIN</span></h1> 
-          <p class="lead">Cute ,Innocent/Helpful Mind, Eye comes In relax state when one see Food Update,keep spreading cooking recipes U Sweet Beat(Never met But It is Power Of Human Behaviour Psychology {Common Sense })</p>
-          <a href="#" class="btn btn-outline-danger">Cowwasami Rocks</a>
-        </div>
-      </div>
-    </div>
-   </section> 
-
   
-            </div>
+            
             <!-- EXPLORE SECTION -->
   <!-- <section id="explore-section" class="bg-light text-muted py-5">
     <div class="container">
@@ -157,18 +132,6 @@
   </section>
  -->
   <!-- CREATE -->
-  <section id="create-head-section" class="bg-danger">
-    <div class="container">
-      <div class="row">
-        <div class="col text-center py-5">
-          <h1 class="display-4">LIGHT<span style="color:rgb(157, 255, 0);">Walla</span></h1> 
-          <p class="lead">Light is Best,but know to undress the stress.You are like detective james Bond</p>
-          <a href="#" class="btn btn-outline-light bg-danger">Lightness Null Darkness</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
   <!-- CREATE SECTION -->
   <!-- <section id="create-section" class="py-5">
     <div class="container">
